force-app/main/default/objects/Agency_Contract1__c/Agency_Contract1__c.object-meta.xml
<CustomObject>
    <label>Grant / Contract</label>
    <nameField>
        <label>Agency Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grants / Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>