force-app/main/default/objects/Agency_Contract1__c/fields/Current_Priority__c.field-meta.xml
<CustomField>
    <fullName>Current_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will be used to select the current priority grant for transit card distributions</description>
    <inlineHelpText>This checkbox will be used to select the current priority grant for transit card distributions</inlineHelpText>
    <label>Current Priority</label>
    <type>Checkbox</type>
</CustomField>