force-app/main/default/objects/Agency_Contract1__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Created in Feb 2018 to match &apos;Customer List&apos; from Work Logs object. Eventually, both picklists will be replaced with lookups (For Contracts, to Org and/or Opp; for Work Logs, to Contract).

AB created Org Lookup on 7/18/2018.</description>
    <label>x Customer Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>27th Ward</fullName>
            </value>
            <value>
                <fullName>312 Goose Island Urban Block Party</fullName>
            </value>
            <value>
                <fullName>Admiral</fullName>
            </value>
            <value>
                <fullName>Albany Park (SSA 60)</fullName>
            </value>
            <value>
                <fullName>Anatomical Gift</fullName>
            </value>
            <value>
                <fullName>Andersonville Chamber of Commerce (SSA 22)</fullName>
            </value>
            <value>
                <fullName>Andersonville City Made Fest</fullName>
            </value>
            <value>
                <fullName>Apple Fest (Big Buzz Media)</fullName>
            </value>
            <value>
                <fullName>Auburn Gresham (SSA 32)</fullName>
            </value>
            <value>
                <fullName>Auburn Gresham (SSA 69)</fullName>
            </value>
            <value>
                <fullName>Austin Lusson</fullName>
            </value>
            <value>
                <fullName>Beth Peter</fullName>
            </value>
            <value>
                <fullName>Big Buzz Hot Dog Fest</fullName>
            </value>
            <value>
                <fullName>Bright Beat</fullName>
            </value>
            <value>
                <fullName>Bright Endeavors</fullName>
            </value>
            <value>
                <fullName>Calumet Heights Avalon (SSA)</fullName>
            </value>
            <value>
                <fullName>CAN TV</fullName>
            </value>
            <value>
                <fullName>Cary Main Street Fest</fullName>
            </value>
            <value>
                <fullName>CD One Price</fullName>
            </value>
            <value>
                <fullName>Cedar Street Companies</fullName>
            </value>
            <value>
                <fullName>Celebrate Hyde Park</fullName>
            </value>
            <value>
                <fullName>Changing Worlds Fest</fullName>
            </value>
            <value>
                <fullName>Chicago Center for Arts and Technology</fullName>
            </value>
            <value>
                <fullName>Chicago Cubs</fullName>
            </value>
            <value>
                <fullName>Chicago Dance</fullName>
            </value>
            <value>
                <fullName>Chicago Neighborhood Rebuild</fullName>
            </value>
            <value>
                <fullName>City of Evanston</fullName>
            </value>
            <value>
                <fullName>Collateral Trustee</fullName>
            </value>
            <value>
                <fullName>Colliers International</fullName>
            </value>
            <value>
                <fullName>Community Builders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>