force-app/main/default/objects/Agency_Contract1__c/fields/Enrollment_Limit__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Limit__c</fullName>
    <label>Enrollment Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>