force-app/main/default/objects/Agency_Contract1__c/fields/Funding_Contact__c.field-meta.xml
<CustomField>
    <fullName>Funding_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Grants / Contracts</relationshipLabel>
    <relationshipName>Grants_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>