force-app/main/default/objects/Agency_Contract1__c/fields/Funding_Name__c.field-meta.xml
<CustomField>
    <fullName>Funding_Name__c</fullName>
    <label>Funding Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Name 1</fullName>
            </value>
            <value>
                <fullName>Name 2</fullName>
            </value>
            <value>
                <fullName>Name 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>