force-app/main/default/objects/Agency_Contract1__c/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Source</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Grants / Contracts</relationshipLabel>
    <relationshipName>Grants_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>