force-app/main/default/objects/Agency_Contract1__c/fields/Grant_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Grant_Contract_End_Date__c</fullName>
    <label>Grant/Contract End Date</label>
    <type>Date</type>
</CustomField>