force-app/main/default/objects/Agency_Contract1__c/fields/Grant_Contract_Limit__c.field-meta.xml
<CustomField>
    <fullName>Grant_Contract_Limit__c</fullName>
    <label>Grant/Contract Limit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>