force-app/main/default/objects/Agency_Contract1__c/fields/Grant_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Grant_Contract_Type__c</fullName>
    <label>Grant/Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CDBG Aurora</fullName>
            </value>
            <value>
                <fullName>CDBG - CARES Act</fullName>
            </value>
            <value>
                <fullName>CDBG EP&amp;P</fullName>
            </value>
            <value>
                <fullName>CDBG T&amp;P</fullName>
            </value>
            <value>
                <fullName>Chicago Foundation for Women</fullName>
            </value>
            <value>
                <fullName>Corporate-Transitional Jobs for Ex-Offenders</fullName>
            </value>
            <value>
                <fullName>Covenant House</fullName>
            </value>
            <value>
                <fullName>CSBG - CARES Act</fullName>
            </value>
            <value>
                <fullName>CSBG - TJ</fullName>
            </value>
            <value>
                <fullName>DHS - FSE&amp;T</fullName>
            </value>
            <value>
                <fullName>DHS - SNAP to Success</fullName>
            </value>
            <value>
                <fullName>DHS - TANF</fullName>
            </value>
            <value>
                <fullName>Digital Divide</fullName>
            </value>
            <value>
                <fullName>Dignity of Choice</fullName>
            </value>
            <value>
                <fullName>Eleanor Foundation Grant (cohort 1)</fullName>
            </value>
            <value>
                <fullName>Eleanor Foundation Grant (cohort 2)</fullName>
            </value>
            <value>
                <fullName>Eleanor Foundation Grant (cohort 3)</fullName>
            </value>
            <value>
                <fullName>EPIC</fullName>
            </value>
            <value>
                <fullName>Job Training and Economic Development</fullName>
            </value>
            <value>
                <fullName>LISC - CDBG</fullName>
            </value>
            <value>
                <fullName>Neighborhood Cleanup</fullName>
            </value>
            <value>
                <fullName>No grant eligibility</fullName>
            </value>
            <value>
                <fullName>Rebuild</fullName>
            </value>
            <value>
                <fullName>REDF</fullName>
            </value>
            <value>
                <fullName>SPRING Forward</fullName>
            </value>
            <value>
                <fullName>TIF - 24th Ward</fullName>
            </value>
            <value>
                <fullName>TIF - Hyde Park</fullName>
            </value>
            <value>
                <fullName>Traditional</fullName>
            </value>
            <value>
                <fullName>Training for Tomorrow</fullName>
            </value>
            <value>
                <fullName>Work Services-Traditional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>