force-app/main/default/objects/Agency_Contract1__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Organization (Customer)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Customer_Type_Formula__c</field>
            <operation>contains</operation>
            <value>Cleanslate</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Grants / Contracts (Organization (Customer))</relationshipLabel>
    <relationshipName>Grants_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>