force-app/main/default/objects/Agency_Contract1__c/fields/Priority_Rank__c.field-meta.xml
<CustomField>
    <fullName>Priority_Rank__c</fullName>
    <description>This field will be used to determine the Grant/Contract priority based on a number system</description>
    <label>Priority Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>