force-app/main/default/objects/Agency_Contract1__c/fields/Studentforce_Import_ID__c.field-meta.xml
<CustomField>
    <fullName>Studentforce_Import_ID__c</fullName>
    <label>Studentforce Import ID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>