force-app/main/default/objects/Agency_Contract1__c/fields/Total_Amount_Billed__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Billed__c</fullName>
    <label>Total Amount Billed</label>
    <summarizedField>Contract_Link__c.Amount_Billed__c</summarizedField>
    <summaryForeignKey>Contract_Link__c.Grant_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>