force-app/main/default/objects/Agency_Contract1__c/fields/Total_Contract_Links__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Links__c</fullName>
    <label>Total Contract Links</label>
    <summaryFilterItems>
        <field>Contract_Link__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Student Assignment</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_Link__c.Grant_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>