force-app/main/default/objects/Agency_Contract1__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <label>Total Contract Expenses</label>
    <summarizedField>Contract_Link__c.Total_Expenses_Billed__c</summarizedField>
    <summaryForeignKey>Contract_Link__c.Grant_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>