force-app/main/default/objects/Agency_Contract1__c/fields/Total_Open_Enrollments__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Enrollments__c</fullName>
    <label>Total Open Enrollments</label>
    <summaryFilterItems>
        <field>Contract_Link__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Student Assignment</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Contract_Link__c.Completion_Date__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Contract_Link__c.Funder_Approved__c</field>
        <operation>notEqual</operation>
        <value>No</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Contract_Link__c.Enrollment_Date__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_Link__c.Grant_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>