force-app/main/default/objects/Agency_Contract1__c/fields/Total_Prospects__c.field-meta.xml
<CustomField>
    <fullName>Total_Prospects__c</fullName>
    <label>Total Prospects</label>
    <summaryFilterItems>
        <field>Contract_Link__c.Prospect_Only__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_Link__c.Grant_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>