force-app/main/default/objects/Agency_Contract1__c/recordTypes/Cleanslate_Contract.recordType-meta.xml
<RecordType>
    <fullName>Cleanslate_Contract</fullName>
    <active>true</active>
    <label>Cleanslate Contract</label>
</RecordType>