force-app/main/default/objects/Agency_Contract1__c/recordTypes/Funding_Contract.recordType-meta.xml
<RecordType>
    <fullName>Funding_Contract</fullName>
    <active>true</active>
    <label>Funding Contract</label>
</RecordType>