force-app/main/default/objects/Agency_Contract1__c/validationRules/Contract_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>Grant_Contract_End_Date__c &lt;  Grant_Contract_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Grant_Contract_End_Date__c</errorDisplayField>
    <errorMessage>Contract End Date should be after Contract Start Date</errorMessage>
</ValidationRule>