force-app/main/default/objects/Agency_Contract1__c/listViews/All_Cleanslate_Contracts.listView-meta.xml
<ListView>
    <fullName>All_Cleanslate_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Organization__c</columns>
    <columns>Grant_Contract_Start_Date__c</columns>
    <columns>Grant_Contract_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Agency_Contract1__c.Cleanslate_Contract</value>
    </filters>
    <label>All Cleanslate Contracts</label>
    <language>en_US</language>
    <sharedTo></sharedTo>
</ListView>