force-app/main/default/objects/Agency_Contract1__c/listViews/Current_Funding_Contracts.listView-meta.xml
<ListView>
    <fullName>Current_Funding_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Priority_Rank__c</columns>
    <columns>Grant_Contract_Type__c</columns>
    <columns>Grant_Contract_Abbreviation__c</columns>
    <columns>Grant_Contract_Start_Date__c</columns>
    <columns>Grant_Contract_End_Date__c</columns>
    <columns>Total_Enrollments__c</columns>
    <columns>Total_Open_Enrollments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Grant_Contract_End_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Agency_Contract1__c.Funding_Contract</value>
    </filters>
    <label>Current Funding Contracts</label>
    <sharedTo>
        <role>Contracts_Manager</role>
    </sharedTo>
</ListView>