force-app/main/default/objects/Agency_Contract1__c/listViews/X2019_Funding_Contracts.listView-meta.xml
<ListView>
    <fullName>X2019_Funding_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Grant_Contract_Type__c</columns>
    <columns>Grant_Contract_Abbreviation__c</columns>
    <columns>Grant_Contract_Start_Date__c</columns>
    <columns>Grant_Contract_End_Date__c</columns>
    <columns>Total_Enrollments__c</columns>
    <columns>Total_Open_Enrollments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>2019</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Agency_Contract1__c.Funding_Contract</value>
    </filters>
    <label>2019 Funding Contracts</label>
    <language>en_US</language>
    <sharedTo>
        <role>Contracts_Manager</role>
    </sharedTo>
</ListView>